# fw2tar

./: .gitignore  Cargo.toml  Dockerfile  README.md  build_singularity.sh  diff_archives.py  download_github_asset.sh  extract.py  flake.nix  fw2tar  fw2tar.py  fw2tar.sh  fwstitch  make_containers.sh  run.sh  run_binwalk.sh  run_inner.sh  run_unblob.sh  test_filesystem_unifier.py  unifyfs.py
.github/workflows/: build.yaml  cleanup.yaml  nightly.yaml  publish.yaml  test.yaml
benches/: linux_directory_checking.rs
nix/: binwalk2.nix
src/: archive.rs  args.rs  error.rs  fakeroot_fw2tar  fw2tar  lib.rs  main.rs  metadata.rs  package_partitions.sh  unblob_min.py
src/analysis/: directory_executables.rs  find_linux_filesystems.rs  mod.rs
src/extractors/: binwalk.rs  binwalk3.rs  mod.rs  unblob.rs
src/resources/: banner.sh  fw2tar_install  fw2tar_install.local  fwstitch_install  fwstitch_install.local
tests/: .gitignore  BEHAVIOR.md  README.md  check.py  check_cpio_result.py  compare_json.py  end_to_end.sh  make_cpio_symlinks.sh  make_files.sh  tar_to_json.py
tests/behavior/: Dockerfile  build_rootfs.py  check_behavior.py  make_images.sh  run.sh  run_in_container.sh
tests/container/: run.sh
tests/contract/: check_contract.py  run.sh
tests/results/: ac2600.json.old  ac2600_listing.txt.old  ax1800.json.old  ax1800_listing.txt.old  ax86u.json.old  ax86u_listing.txt.old  google_wifi.json.old  google_wifi_listing.txt.old  linksys_ax3200.json.old  (+8 more)
unifyroot/: README.md
utils/: build_singularity.sh  diff_archives.py  run_binwalk.sh  run_unblob.sh  show_metadata.py
(+16 files in other folders)
