[package]
name = "fw2tar"
version = "2.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
flate2 = "1.1.0"
libc = "0.2.171"
log = "0.4.26"
nix = { version = "0.29.0", features = ["user"] }
pretty_env_logger = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10.6"
tar = { git = "https://github.com/jamcleod/tar-rs" }
tempfile = "3.19.0"
thiserror = "2.0.12"
wait-timeout = "0.2.1"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "linux_directory_checking"
harness = false
